--- a/login.html
+++ b/login.html
@@ -1,21 +1,35 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="en">
 <head>
-    <title>Login Page</title>
+  <meta charset="UTF-8">
+  <title>My Portfolio</title>
 </head>
-<body>
-
-    <h2>Login</h2>
-
-    <form>
-        <label>Username:</label><br>
-        <input type="text" name="username"><br><br>
-
-        <label>Password:</label><br>
-        <input type="password" name="password"><br><br>
-
-        <input type="submit" value="Login">
-    </form>
-
-</body>
+<body>  <header>
+    <h1>Maha Lakshmi</h1>
+    <p>BCA Student | Beginner Web Developer</p>
+    <hr>
+  </header>  <section>
+    <h2>About Me</h2>
+    <p>I am a BCA 2nd-year student. I have completed HTML basics and I am learning web development.</p>
+  </section>  <section>
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML5</li>
+      <li>CSS (Learning)</li>
+      <li>Java (Basics)</li>
+      <li>Python (Basics)</li>
+    </ul>
+  </section>  <section>
+    <h2>Projects</h2>
+    <ol>
+      <li>Basic Portfolio Website</li>
+      <li>Login Page using HTML</li>
+    </ol>
+  </section>  <section>
+    <h2>Contact</h2>
+    <p>Email: yourmail@gmail.com</p>
+    <p>Phone: +91 XXXXX XXXXX</p>
+  </section>  <footer>
+    <hr>
+    <p>© 2025 Maha Lakshmi</p>
+  </footer></body>
 </html>
